FIX #426: Override autofill styles in dark mode
Not super pretty, but you can at least read it!

--- a/pipeline/source_assets/scss/dark_screen.scss
+++ b/pipeline/source_assets/scss/dark_screen.scss
@@ -119,4 +119,18 @@
         background: #222;
         color: $gray-100;
     }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+      border: 1px solid $info;
+      -webkit-text-fill-color: white;
+      -webkit-box-shadow: 0 0 0px 1000px rgba($info, .3) inset;
+      transition: background-color 5000s ease-in-out 0s;
+    }
 }
